<resources>
    <string name="app_name">BlueDating</string>
    <string name="facebook_app_id">329764144164230</string>
    <string name="fb_login_protocol_scheme">fb329764144164230</string>

    <!-- navigation drawer -->
    <string name="nav_home">Home</string>
    <string name="nav_room">Find Around</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_date">Date</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="menu_profile_view">view</string>
    <string name="menu_profile_upload">upload an image</string>
    <string name="menu_profile_take">take picture</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>

    <!-- profile -->
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>

    <string name="hint_a_message">Type a message</string>


</resources>
