<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:title="Other">
        <menu>
            <item android:title="@string/nav_settings"
                android:id="@+id/menu_nav_setting"
                android:icon="@drawable/ic_setting"
                ></item>
            <item android:title="@string/nav_about_us"
                android:id="@+id/menu_nav_about_us"
                android:icon="@mipmap/ic_launcher"></item>


        </menu>

    </item>
    <group android:checkableBehavior="single">
    <item android:title="@string/nav_profile"
        android:icon="@drawable/ic_profile"
        android:id="@+id/menu_nav_profile"

        ></item>

     <item
         android:title="@string/nav_room"
         android:id="@+id/menu_nav_room"
         android:icon="@drawable/ic_room"
         ></item>

      <item
          android:title="@string/nav_date"
          android:id="@+id/menu_nav_dates"
          android:icon="@drawable/ic_alarm"
          ></item>
    </group>
</menu>