<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_left"
    android:paddingRight="@dimen/margin_right"
    tools:context="com.example.pc.bluedating.MainScreen_Function.ProfileFragment">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:id="@+id/image_profile_avatar"
       />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginBottom="@dimen/margin_bottom"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title"
            android:text="@string/name"
            />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="truong quoc khanh"
                style="@style/sub_title"
                android:id="@+id/editText_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            style="@style/title"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_title"
            android:text="female"
            android:id="@+id/editText_gender" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title"
            android:text="@string/email"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cuk2dn95@gmail.com"
            style="@style/sub_title"
            android:id="@+id/editText_email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/title"
            android:text="@string/birthday"
            android:inputType="none"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/sub_title"
            android:id="@+id/editText_birthday"
            android:text="02/09/1995"/>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/btn_clickable"
               android:text="@string/save_button"
               android:id="@+id/btn_save"
               />

           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentRight="true"
               android:background="@drawable/btn_plain"
               android:text="@string/cancel_button"
               android:id="@+id/btn_cancel"
               />

       </RelativeLayout>
    </LinearLayout>


</LinearLayout>
